# RustSight

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.txt  release-please.config.json  setup.ps1
.github/workflows/: release-please.yml
gear_guard_net-onnx-w8a8/: metadata.yaml
src/: main.rs
