[package]
name = "rustsight"
version = "1.0.0"
edition = "2021"

[dependencies]
ort       = { version = "2.0.0-rc.12", features = ["qnn", "directml"] }
opencv    = { version = "0.92", features = ["videoio", "imgproc", "highgui"] }
ndarray   = "0.17"
anyhow    = "1.0"
serde     = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
